# atlas

./: .env.example  .gitignore  Cargo.toml  README.md  SPEC.md  docker-compose.yml
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: eventbus.rs  lib.rs  mock_repos.rs
crates/atlas-core/src/absence/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/account_hierarchy/: mod.rs
crates/atlas-core/src/account_monitor/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/accounting_hub/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/accounts_payable/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/accounts_receivable/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/advance_payment/: engine.rs  mod.rs
crates/atlas-core/src/allocation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/ap_aging/: engine.rs  mod.rs
crates/atlas-core/src/approval/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/approval_authority/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/approval_delegation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/ar_aging/: engine.rs  mod.rs
crates/atlas-core/src/asset_depreciation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/asset_reclassification/: mod.rs
crates/atlas-core/src/asset_retirement/: mod.rs
crates/atlas-core/src/audit/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/autoinvoice/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/available_funds/: mod.rs
crates/atlas-core/src/bank_account_transfer/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/bank_guarantee/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/benefits/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/budget/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/cash_concentration/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/cash_flow_forecast/: engine.rs  mod.rs
crates/atlas-core/src/cash_flow_statement/: mod.rs
crates/atlas-core/src/cash_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/cash_position/: engine.rs  mod.rs
crates/atlas-core/src/channel_revenue/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/chargeback_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/cip_capitalization/: mod.rs
crates/atlas-core/src/collections/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/compensation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/config/: engine.rs  loader.rs  mod.rs
crates/atlas-core/src/contract_lifecycle/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/corporate_card/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/cost_accounting/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/cost_allocation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/credit_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/cross_validation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/currency/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/currency_revaluation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/customer_deposit/: engine.rs  mod.rs
crates/atlas-core/src/customer_returns/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/customer_statement/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/data_archiving/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/deferred_revenue/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/demand_planning/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/descriptive_flexfield/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/document_sequencing/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/encumbrance/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/engineering_change_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/enterprise_asset_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/expense/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/expense_policy_compliance/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/financial_consolidation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/financial_controls/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/financial_dimension_set/: mod.rs
crates/atlas-core/src/financial_ratio/: engine.rs  mod.rs
crates/atlas-core/src/financial_reporting/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/financial_statements/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/fixed_assets/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/formula/: engine.rs  mod.rs  parser.rs
crates/atlas-core/src/funds_reservation/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/general_ledger/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/gl_budget_transfer/: mod.rs
crates/atlas-core/src/goal_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/grant_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/health_safety/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/hedge_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/impairment_management/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/inflation_adjustment/: engine.rs  mod.rs  repository.rs
crates/atlas-core/src/intercompany/: engine.rs  mod.rs  repository.rs
crates/atlas-financials/: Cargo.toml
crates/atlas-financials/src/: entities.rs  lib.rs  services.rs
crates/atlas-gateway/: Cargo.toml
crates/atlas-gateway/src/: lib.rs  main.rs  state.rs
crates/atlas-gateway/tests/: e2e.rs
crates/atlas-hcm/: Cargo.toml
crates/atlas-hcm/src/: entities.rs  lib.rs  services.rs
crates/atlas-macros/: Cargo.toml
crates/atlas-macros/src/: lib.rs
crates/atlas-shared/: Cargo.toml
crates/atlas-shared/src/: errors.rs  events.rs  lib.rs  types.rs
frontend/apps/admin/: Cargo.toml  Trunk.toml  index.html
frontend/apps/dashboard/: Cargo.toml  Trunk.toml  index.html
(+700 files in other folders)
