[workspace]
resolver = "2"
members = [
    "crates/atlas-core",
    "crates/atlas-macros",
    "crates/atlas-shared",
    "crates/atlas-gateway",
    "crates/atlas-hcm",
    "crates/atlas-financials",
    "crates/atlas-scm",
    "crates/atlas-crm",
    "crates/atlas-projects",
]
exclude = ["frontend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Atlas ERP Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.2", features = ["server"] }
tokio = { version = "1.36", features = ["full"] }
tower-layers = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Event bus
nats = "0.26"

# Template engine
minijinja = "1.0"

# Expression parsing
 pest = "2.7"
 pest_derive = "2.7"

# Protobuf
prost = "0.12"
tonic = "0.11"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 0
debug = true
