[package]
name = "atlas-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "atlas-gateway"
path = "src/main.rs"

[lib]
name = "atlas_gateway"
path = "src/lib.rs"

[dependencies]
atlas-shared = { path = "../atlas-shared" }
atlas-core = { path = "../atlas-core" }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout"] }
hyper = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
parking_lot = "0.12"

# Event bus
async-nats = { workspace = true }

# Validation
validator = { workspace = true }
regex = { workspace = true }

# CSV handling
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["timeout"] }
http = "1"
http-body = "1"
serde_json = { workspace = true }
atlas-shared = { path = "../atlas-shared" }
atlas-core = { path = "../atlas-core" }
