[package]
name = "atlas-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
