[package]
name = "atlas-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
