[package]
name = "atlas-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_log = "1.0"
log = "0.4"
