[package]
name = "atlas-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = "0.11"
gloo-net = { version = "0.6", features = ["json"] }
urlencoding = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement",
    "HtmlElement", "Window", "Document", "Element",
] }
js-sys = "0.3"
console_log = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror = "1"
futures = "0.3"
